--- a/src/app/coach-composition/coach-composition.component.html
+++ b/src/app/coach-composition/coach-composition.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-9">
       <form [formGroup]="coachCompositionForm" (ngSubmit)="onSubmit()">
 
-        <div class="mb-1">
+        <!-- <div class="mb-1">
           <app-form-input
             name="Coach Composition ID"
             type="number"
@@ -12,7 +12,7 @@
           </app-form-input>
         </div>
         <p *ngIf="coachCompositionForm.controls['coachCompositionId'].touched &&
-         coachCompositionForm.controls['coachCompositionId'].invalid"> invalid Number</p>
+         coachCompositionForm.controls['coachCompositionId'].invalid"> invalid Number</p> -->
 
           <div class="mb-1">
             <app-form-input
