--- a/src/app/train-composition/train-composition.component.html
+++ b/src/app/train-composition/train-composition.component.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-md-8">
         <form [formGroup]="trainCompositionForm" (ngSubmit)="onSubmit()">
-          <div class="mb-1 w-100">
+          <!-- <div class="mb-1 w-100">
             <app-form-input name="Train Composition Id :" type="number" inputFormName="trainCopmpsitionID"
               [formGroupInputGroup]="trainCompositionForm"></app-form-input>
-          </div>
+          </div> -->
           <div class="mb-2 w-100">
             <app-form-input name="Coach Count :" type="number" inputFormName="couchCount"
               [formGroupInputGroup]="trainCompositionForm"></app-form-input>
